Se actualiza informe de mutaciones con PIT

--- a/src/test/resources/report/com.rsa.spaceships.infrastructure.mappers/SpaceshipMapperImpl.java.html
+++ b/src/test/resources/report/com.rsa.spaceships.infrastructure.mappers/SpaceshipMapperImpl.java.html
@@ -23,7 +23,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e1f1046_19'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceship<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceship()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceship<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:nullToSpaceship()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -34,7 +34,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e1f1046_25'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceship<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceship()]</span></span> removed call to com/rsa/spaceships/domain/models/Spaceship::setId &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceship<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipsIterable()]</span></span> removed call to com/rsa/spaceships/domain/models/Spaceship::setId &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -45,7 +45,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e1f1046_26'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceship<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceship()]</span></span> removed call to com/rsa/spaceships/domain/models/Spaceship::setName &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceship<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipsIterable()]</span></span> removed call to com/rsa/spaceships/domain/models/Spaceship::setName &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -56,7 +56,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e1f1046_28'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceship<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceship()]</span></span> replaced return value with null for com/rsa/spaceships/infrastructure/mappers/SpaceshipMapperImpl::toSpaceship &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceship<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipsIterable()]</span></span> replaced return value with null for com/rsa/spaceships/infrastructure/mappers/SpaceshipMapperImpl::toSpaceship &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -67,7 +67,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e1f1046_33'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceships<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipsIterable()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceships<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:nullToSpaceships()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -78,7 +78,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e1f1046_34'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceships<br/><b>Killed by : </b>none</span></span> replaced return value with Collections.emptyList for com/rsa/spaceships/infrastructure/mappers/SpaceshipMapperImpl::toSpaceships &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceships<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:nullToSpaceships()]</span></span> replaced return value with Collections.emptyList for com/rsa/spaceships/infrastructure/mappers/SpaceshipMapperImpl::toSpaceships &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -100,7 +100,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e1f1046_47'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceshipEntity<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipEntity()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toSpaceshipEntity<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:nullToSpaceshipEntity()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -169,7 +169,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceship()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipsIterable()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipsPage()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerFindByNameLike()] (8 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearance()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearances()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerFindByRecordingNameLike()] (12 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerUpdate()] (19 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerFindById()] (28 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:appearanceControllerCreate()] (23 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerDelete()] (41 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerCreate()] (48 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerFindAll()] (63 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipEntity()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearanceEntity()] (2 ms)</li>
+<li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipsIterable()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceship()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipsPage()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearance()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerCreateNotNullId()] (10 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerFindByNameLike()] (9 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerFindByRecordingNameLike()] (10 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearances()] (4 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerUpdate()] (20 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerFindById()] (26 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:appearanceControllerCreate()] (20 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerDelete()] (26 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerCreate()] (50 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerFindAll()] (56 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:toSpaceshipEntity()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearanceEntity()] (4 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:nullToSpaceships()] (1 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:nullToSpaceship()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.SpaceshipMapperTest]/[method:nullToSpaceshipEntity()] (1 ms)</li>
 </ul>
 
 <br/>
