--- a/src/test/resources/report/com.rsa.spaceships.infrastructure.mappers/AppearanceMapperImpl.java.html
+++ b/src/test/resources/report/com.rsa.spaceships.infrastructure.mappers/AppearanceMapperImpl.java.html
@@ -23,7 +23,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@12d40609_25'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toAppearance<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearance()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toAppearance<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:nullToAppearance()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -78,7 +78,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@12d40609_40'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toAppearances<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearances()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toAppearances<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:nullToAppearances()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -89,7 +89,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@12d40609_41'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toAppearances<br/><b>Killed by : </b>none</span></span> replaced return value with Collections.emptyList for com/rsa/spaceships/infrastructure/mappers/AppearanceMapperImpl::toAppearances &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toAppearances<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:nullToAppearances()]</span></span> replaced return value with Collections.emptyList for com/rsa/spaceships/infrastructure/mappers/AppearanceMapperImpl::toAppearances &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -111,7 +111,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@12d40609_54'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toAppearanceEntity<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearanceEntity()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toAppearanceEntity<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:nullToAppearanceEntity()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -191,7 +191,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearanceEntity()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:appearanceControllerCreate()] (23 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearance()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearances()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerDelete()] (41 ms)</li>
+<li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearanceEntity()] (4 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:appearanceControllerCreate()] (20 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearance()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearances()] (4 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerDelete()] (26 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:nullToAppearances()] (1 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:nullToAppearanceEntity()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:nullToAppearance()] (2 ms)</li>
 </ul>
 
 <br/>
