--- a/src/test/resources/report/com.rsa.spaceships.infrastructure.mappers/RecordingMapperImpl.java.html
+++ b/src/test/resources/report/com.rsa.spaceships.infrastructure.mappers/RecordingMapperImpl.java.html
@@ -23,7 +23,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@1d7eb170_19'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toRecording<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecording()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toRecording<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:nullToRecording()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -67,7 +67,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@1d7eb170_33'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toRecordings<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecordings()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toRecordings<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:nullToRecordings()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -78,7 +78,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@1d7eb170_34'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toRecordings<br/><b>Killed by : </b>none</span></span> replaced return value with Collections.emptyList for com/rsa/spaceships/infrastructure/mappers/RecordingMapperImpl::toRecordings &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toRecordings<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:nullToRecordings()]</span></span> replaced return value with Collections.emptyList for com/rsa/spaceships/infrastructure/mappers/RecordingMapperImpl::toRecordings &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -100,7 +100,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@1d7eb170_47'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toRecordingEntity<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecordingEntity()]</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>toRecordingEntity<br/><b>Killed by : </b>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:nullToRecordingEntity()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -169,7 +169,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecordingEntity()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearanceEntity()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:appearanceControllerCreate()] (23 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecordings()] (4 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:recordingControllerFindBySpaceshipNameLike()] (375 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecording()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearance()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearances()] (3 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerDelete()] (41 ms)</li>
+<li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecordingEntity()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearanceEntity()] (4 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:appearanceControllerCreate()] (20 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecordings()] (4 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:recordingControllerFindBySpaceshipNameLike()] (373 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:toRecording()] (1 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearance()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.AppearanceMapperTest]/[method:toAppearances()] (4 ms)</li><li>com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.controllers.ControllersIntegrationTest]/[method:spaceshipControllerDelete()] (26 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:nullToRecording()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:nullToRecordings()] (2 ms)</li><li>com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest.[engine:junit-jupiter]/[class:com.rsa.spaceships.infrastructure.mappers.RecordingMapperTest]/[method:nullToRecordingEntity()] (2 ms)</li>
 </ul>
 
 <br/>
